# catalog_agent

catalog_agent/: .gitignore  README.md  materna-ca-bundle.pem  pyproject.toml  requirements.txt
catalog_agent/data/: data_presentation_task.md  execute_sql_task.json  metadata.sqlite  mock_energy_metadata.json  natural_language_query_task.json  natural_language_query_task.txt
catalog_agent/src/catalog_agent/: crew.py  main.py
catalog_agent/src/catalog_agent/config/: agents.yaml  tasks.yaml
catalog_agent/tests/: duck_db.ipynb  sqlite.ipynb
